# cscd499-genai

./: .gitignore  README.md
labs/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  lab6.ipynb  lab7.ipynb  lab8.ipynb  lab9.ipynb
research/: benchmark_prompt.md  rust_dependencies.md  simple_prompt.md  split_problems.py  test_generator.md  verified_solutions_agent.py  verified_solutions_agent_v2.py  verify_tests_agent.py
research/agents/: api_usage_agent.py  clippy_fix_agent.py  evolve_problems_agent.py  extract_snippets_agent.py  generate_problems_agent.py  helpers.py  mine_repair_critique.py  review_alignment_agent.py  sample_to_prompt_agent.py  seed_ingest_agent.py  verified_solutions_agent.py  verified_tests_agent.py  windows_snippet_agent.py
research/agents/snippets/app_launcher_ipc/: 1ed2c4c4.rs  manifest.jsonl
research/agents/snippets/astral_nt/: 1ba096ef.rs  aff4d304.rs  c15b035f.rs  manifest.jsonl
research/agents/snippets/bits/: d82de211.rs  (+1 more)
research/agents/verified-solution-steps/: critique.jsonl  repair.jsonl
research/bench-harness/: Cargo.toml
research/bench-harness/src/: main.rs
research/dataset/: generate_tests.py  humaneval_rust.py  merge_adapter.py  prepare_dataset.py  prepare_datasets.bat  prepare_training.py  split_dataset.py  split_problems.py  train.bat  train.py  train_qwen25.py  train_qwen35.py
research/dataset/humaneval-rust/: benchmark.json  manifest.jsonl
research/dataset/personal-rust/: personal_rust.py
research/dataset/raw-samples/: app_launcher_ipc.rs  astral_nt.rs  astral_wfp.rs  ch4_win.rs  clean_clipyboard.rs  clean_menu.rs  conpty_console.rs  conpty_dynamic_api.rs  conpty_process.rs  desktop_wallpaper.rs  dispman_ddc.rs  dns_agent_tray.rs  fishnet_process_priority.rs  fswitch_tab.rs  fswitch_ui.rs  gpg_ssh.rs  grim_memory.rs  grim_process.rs  grim_sdl.rs  grimmod_misc.rs  hk4e_universal.rs  hyperscoop_build.rs  ignition_npp_def.rs  ignition_npp_functions.rs  is_admin.rs  neofetch_wm.rs  netfetch_platform.rs  no_ecoqos_w32.rs  notify_icon.rs  orbit_monitor_name.rs  rustnet_interface_stats.rs  rustnet_process.rs  samp_gta.rs  tao_darkmode.rs  tao_dpi.rs  tao_keyboard.rs  tao_monitor.rs  tao_utils.rs  tao_window.rs  tcp_drop.rs  (+13 more)
research/dataset/samples/: 1387175b.rs  1ff8957f.rs  31051c4c.rs  3b153fa4.rs  3b5df877.rs  43c09d26.rs  4e3e1140.rs  5762a727.rs  6b084741.rs  990455ae.rs  9c81981e.rs  9e3396d8.rs  a1e7a705.rs  a4af4e76.rs  a63ca657.rs  a8fc0250.rs  c5e2d4cf.rs  d16f0abc.rs  d9e20924.rs  dpi_aware.rs  e3830fc8.rs  e6da6d33.rs  edaebfd9.rs  efae1c22.rs  fa61fa45.rs  monitor_lookup.rs
research/dataset/winapi-eval/: benchmark-v2.json  benchmark.json
research/eval-runner/: Cargo.toml  bench.bat  compare_reports.py
research/eval-runner/src/: main.rs
research/eval-server/: Cargo.toml
research/eval-server/src/: main.rs  windows.rs
research/microsoftdoc-search/: Cargo.toml
research/microsoftdoc-search/src/: main.rs
research/problems/: 01fbb92f-378f-439f-a13e-a2cb8b0543fd.md  0a5d7328-0ec4-4088-83d2-7e1c0e8b27c7.md  0e7d508a-1387-421d-8fea-1afc25b62fb1.md  2487a464-2720-450e-a6d7-dc5d41aba74e.md  2ec7b6df-bcfe-40d5-9e4c-30f74cee8161.md  34ca52a4-5c34-44ff-bd2b-f32a2a13a37f.md  389c197f-5824-4d94-8b13-9c45ae5d3ae6.md  492d89d8-81ce-4333-815b-d08bc4e5f85c.md  4c84e0be-82d0-4d72-b56c-34d46829811c.md  5171d81f-f306-4576-917d-347fa058116f.md  6416086a-4d6e-4c66-bed7-e7e5b70ef13e.md  6b6099f7-86cc-45f8-a2df-4224396428e3.md  7c36058c-947b-4c19-a23c-a0cf6b76e2a9.md  840ce308-0dd4-448b-97a0-7a935441fab4.md  9beb547d-0701-4af0-a8c1-f7e09e0e6beb.md  9ca4c566-6688-48f6-b614-45c02f92575c.md  9d545346-9752-462f-8d84-d51152efa396.md  9fa5c03d-8f09-46bb-9967-7abb881b81f2.md  a1f91486-7450-49e7-b01f-514dd4f3c049.md  a33747d5-5f51-441d-bc7c-c2c4ec8c97b1.md  a97d69ac-17c5-457b-b7ec-36c1bacd8c2d.md  ac8dc7ef-a195-4373-8ab1-5395601ebce1.md  b183cd23-5e09-4ad4-a32f-5b11b8fcc9f3.md  b6e8a0a3-c410-45bf-88d6-6ef45c6144da.md  b8b8cd40-4358-46c5-b526-cb906c3925ea.md  cf6bdb8c-bd3f-4cbd-8764-664370c42fdb.md  d72bb503-3009-4c88-bb7f-208d7520d340.md  e1dc9560-d1e7-4aea-bd1f-5e59c5086f3c.md  f79b392f-950e-4f4e-87a7-d197f394ef3d.md  f9af4916-ed38-4487-92c4-08ee49570ec9.md
research/progress-reports/: week1.md  week2.md  week3.md
research/rustdoc-search/: .gitignore  Cargo.toml  README.md
research/rustdoc-search/src/: doc_builder.rs  doc_parser.rs  lib.rs  main.rs  search.rs  server.rs  src_signature_extractor.rs
(+3854 files in other folders)
