[package]
name = "benchmark_harness"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Com", "Win32_UI", "Win32_UI_Shell", "Win32_System_Ole", "Win32_System_WindowsProgramming", "Win32_System_SystemInformation", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Security"] }