[package]
name = "benchmark_harness"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "*"
rand = "*"
md5 = "*"

windows = { version = "0.62.2", features = [
    "Management",
    "Management_Deployment",
    "ApplicationModel",
    "Win32",
    "Foundation_Collections",
    "System_Threading",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Com",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_EventLog",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Power",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_System_Restore",
    "Win32_System_Services",
    "Win32_System_Rpc",
    "Win32_System_SystemInformation",
    "Win32_System_TaskScheduler",
    "Win32_System_Threading",
    "Win32_System_UpdateAgent",
    "Win32_System_Variant",
    "Win32_Storage_FileSystem",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Globalization"] }