[package]
name = "microsoftdoc-search"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate"] }

scraper = "0.19"
regex = "1"
url = "2"
percent-encoding = "2"
chrono = { version = "0.4", features = ["serde"] }

moka = { version = "0.12", features = ["future"] }
futures = "0.3"

thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }