[package]
name = "rustdoc-search"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "core_extractor"
path = "src/bin/core_extractor.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
ureq = "3"
